[gd_scene load_steps=8 format=3 uid="uid://caammbl0rsp1l"]

[ext_resource type="Script" path="res://combat/projectile_spawner_component.gd" id="1_w610e"]
[ext_resource type="PackedScene" uid="uid://c288bwefp07f0" path="res://sfx/random_audio_player.tscn" id="2_u2a7d"]
[ext_resource type="AudioStream" uid="uid://blao17g3xdkld" path="res://assets/audio/sfx/Custom/shoot_1.wav" id="3_2om27"]
[ext_resource type="AudioStream" uid="uid://bkmuk56xi84dp" path="res://assets/audio/sfx/Custom/shoot_2.wav" id="4_vhqt2"]
[ext_resource type="AudioStream" uid="uid://2kbap5us4w71" path="res://assets/audio/sfx/Custom/shoot_3.wav" id="5_o1smk"]
[ext_resource type="AudioStream" uid="uid://eacrhb83xnw" path="res://assets/audio/sfx/Custom/shoot_4.wav" id="6_mmt5f"]
[ext_resource type="AudioStream" uid="uid://nle1gf3r1640" path="res://assets/audio/sfx/Custom/shoot_5.wav" id="7_qc2fv"]

[node name="ProjectileSpawnerComponent" type="Node2D"]
script = ExtResource("1_w610e")

[node name="TimeBetweenBurstShots" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="RandomAudioPlayer" parent="." instance=ExtResource("2_u2a7d")]
streams = Array[AudioStream]([ExtResource("3_2om27"), ExtResource("4_vhqt2"), ExtResource("5_o1smk"), ExtResource("6_mmt5f"), ExtResource("7_qc2fv")])
